prevent dark mode on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 /* Force light mode regardless of system preferences */
-html {
-  background-color: white;
+html,body {
+  background-color: #ffffff;
+}
+
+html[data-theme="light"] {
+  background-color: #ffffff;
+  color: black;
 }
 
 @media (prefers-color-scheme: light) {
@@ -14,7 +19,7 @@ html {
 
 /* If the system is in dark mode, override it with light mode */
 @media (prefers-color-scheme: dark) {
-  html {
+  html,body {
     background-color: #ffffff;
   }
   :root{
@@ -28,10 +33,9 @@ html {
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
+  /*color: rgba(255, 255, 255, 0.87);*/
   /*background-color: #242424;*/
   background-color: #ffffff;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
